--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,84 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+/* ==== MAIN BANNER ==== */
+.main-banner {
+  position: relative;
+  overflow: hidden;
+  padding: 120px 0;
+  background-color: #f8f9fc;
+}
+
+/* background image sa kanan */
+.main-banner::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 55%;
+  height: 100%;
+  background-image: url("/assets/images/slider-left-dec.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center right;
+  z-index: 1;
+}
+
+.main-banner .header-text {
+  position: relative;
+  z-index: 2;
+}
+
+.main-banner .header-text h6 {
+  color: #ff589e;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+
+.main-banner .header-text h2 {
+  font-size: 42px;
+  line-height: 56px;
+  margin-bottom: 25px;
+}
+
+.main-banner .header-text em {
+  color: #8261ee;
+  font-style: normal;
+}
+
+/* image sa kanan */
+.banner-image {
+  position: relative;
+  z-index: 2;
+  text-align: right;
+}
+
+.banner-image img {
+  max-width: 90%;
+}
+
+/* ==== SERVICES ==== */
+.services {
+  padding: 100px 0;
+}
+
+.section-heading {
   text-align: center;
+  margin-bottom: 60px;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.section-heading h2 {
+  font-size: 32px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.section-heading span {
+  color: #8261ee;
+  text-transform: uppercase;
+  font-weight: 600;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+/* ==== FOOTER ==== */
+footer {
+  text-align: center;
+  padding: 40px 0;
+  background-color: #8261ee;
+  color: #fff;
+  font-size: 14px;
 }
